--- a/springJwt/src/main/resources/application.properties
+++ b/springJwt/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=springJwt
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/orders?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_jwt?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
